Refactor SkillCastMechanic to support non-player targets (#1253)
Replaces player-specific logic with a more generic implementation to handle both players and non-player entities. Consolidates and simplifies casting and skill validation methods to improve code maintainability and flexibility.